# gui

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  Makefile  README.md  SECURITY.md  SUPPORT.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt
.claude/: settings.json
.github/PULL_REQUEST_TEMPLATE/: agents.md  documentation.md  feature.md  fix.md
.github/workflows/: checks.yml  ci.yml  e2e.yml  integration.yml  lint.yml  ruff.yml  tests.yml  ui.yml  unit.yml
apps/api/: Dockerfile  main.py  manager_main.py  requirements.txt
apps/web/: .dockerignore  Dockerfile  eslint.config.mjs  middleware.ts  next.config.js  package-lock.json  package.json  playwright.config.ts  playwright.dashboard.config.ts  playwright.local.config.ts  playwright.oidc.config.ts  playwright.ui.config.ts
docs/: setup.md
docs/contributing/: communication.md  documentation.md
docs/requirements/: 002-server-switcher-and-list-layout.md  003-workspace-selection-and-multi-tenant.md  004-role-tile-quick-links.md  005-store-layout-filters-view.md  006-deploy-server-selection-and-layout.md  007-optional-auth-persistent-workspaces.md  008-role-pricing-variants.md  009-users-ldap-management-after-setup.md  010-devices-provider-mode-and-order-flow.md  011-software-tab-bundles-and-apps.md  012-log.md  013-git.md  014-e2e-dashboard-deploy.md  015-image-build-from-local-source.md  016-performance-and-sse-scalability.md  019-workspace-rbac.md  (+8 more)
scripts/: check-max-lines.sh  ensure-local-runner-image.sh  verify_perf_artifacts.py
(+432 files in other folders)
