[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "infinito-deployer"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Kevin Veen-Birkenbach", email = "kevin@veen.world" }]
license = { text = "All rights reserved by Kevin Veen-Birkenbach" }
urls = { Homepage = "https://github.com/kevinveenbirkenbach/infinito-deployer" }

dependencies = [
    "fastapi>=0.135.3",
    "python-multipart>=0.0.26",
    "pydantic>=2.0",
    "PyYAML>=6.0",
    "ansible>=9.0.0",
    "ruamel.yaml>=0.17",
    "bcrypt>=4.0.0",
    "paramiko>=3.4.0",
    "pykeepass>=4.0.6",
    "pycryptodomex>=3.20.0",
    "psycopg[binary]>=3.2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pip-audit>=2.8",
    "pre-commit>=3.7",
    "ruff>=0.6",
]

# This repo is a monorepo; apps are containerized. The root package itself
# ships no Python modules — only dependency metadata for the dev venv.
[tool.setuptools]
py-modules = []

[tool.ruff.lint]
external = ["WPS"]
